# differential-evolution-mpi

./: CMakeLists.txt  README.md
include/: main.h  rosenbrock.h
src/: main.c  rosenbrock.c
